--- a/Smart-Study-Dashboard/src/App.css
+++ b/Smart-Study-Dashboard/src/App.css
@@ -142,3 +142,10 @@
     font-size: 1.5rem;
   }
 }
+
+.stats {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
