--- a/Smart-Study-Dashboard/src/components/styles/stats.module.css
+++ b/Smart-Study-Dashboard/src/components/styles/stats.module.css
@@ -4,19 +4,34 @@
     gap: 30px;
     padding: 30px 20px;
     flex-wrap: wrap;
-    background-color: #f8f9fa;
     border-radius: 8px;
 }
 
+.statsContainerLight {
+    background-color: #f8f9fa;
+}
+
+.statsContainerDark {
+    background-color: #121212;
+}
+
 .statCard {
-    background-color: #ffffff;
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
     padding: 25px 35px;
     width: 500px;
     text-align: center;
     transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.statCardLight {
+    background-color: #ffffff;
     border-top: 4px solid #60E62B;
+}
+
+.statCardDark {
+    background-color: #282828;
+    border-top: 4px solid #b13bfaff;
 }
 
 .statCard:hover {
@@ -24,7 +39,7 @@
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
 }
 
-.label {
+.labelLight {
     font-size: 0.9rem;
     color: #6c757d;
     margin-bottom: 8px;
@@ -33,14 +48,25 @@
     text-transform: uppercase;
 }
 
-.value {
+.labelDark {
+    font-size: 0.9rem;
+    color: #9a9a9a;
+    margin-bottom: 8px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;    
+}
+
+.valueLight {
     font-size: 2.2rem;
     color: #343a40;
     font-weight: 700;
     line-height: 1.2;
 }
-.unit {
-    font-size: 1.1rem;
-    font-weight: 400;
-    color: #4CAF50;
+
+.valueDark {
+    font-size: 2.2rem;
+    color: #dbdbdb;
+    font-weight: 700;
+    line-height: 1.2;   
 }
